# gitflow-easyrelease

./: .bumpversion.cfg  .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
gitflow_easyrelease/: __init__.py  application.py  cli.py  cli_file.py  color_output.py  git.py  is_semver.py  repo_info.py  semver.py  subcommand.py
old/: README.md
tests/: test_application.py  test_cli.py  test_color_output.py  test_is_semver.py  test_main_module.py  test_repo_info.py  test_sample.py  test_semver.py  test_subcommand.py
