[bumpversion]
current_version = 0.2.0
commit = True
tag = False

[metadata]
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license_file = LICENSE
keywords =
	git
	gitflow
	gitflow-avh
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Topic :: Software Development :: Version Control :: Git

[bdist_wheel]
universal = 1

[options]
install_requires =
	argparse_color_formatter
	ansicolors
	pytest-runner
tests_require =
	mock
	coverage
	pytest
	pytest-cov

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=gitflow_easyrelease --color=yes

[aliases]
test = pytest

[bumpversion:file:setup.py]

