[bumpversion]
current_version = 0.2.0
commit = True
tag = False

[metadata]
version='0.2.0'
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license_file = LICENSE.rst
description = Shortcuts for git flow release with semver support
long_description = file: README.rst
keywords =
	git
	gitflow
	gitflow-avh
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Topic :: Software Development :: Version Control :: Git

[bdist_wheel]
universal = 1

[options]
packages = find:
install_requires =
	argparse_color_formatter
	ansicolors
	pytest-runner
tests_require =
	mock
	coverage
	pytest
	pytest-cov

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=gitflow_easyrelease --color=yes

[aliases]
test = pytest

[bumpversion:file:setup.py]

