[bumpversion]
current_version = 0.2.0
commit = True
tag = False

[metadata]
name = gitflow-easyrelease
version = 0.2.0
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license = file: LICENSE.rst
description = Shortcuts for git flow release with semver support
long_description = file: README.rst
keywords =
	git
	gitflow
	gitflow-avh
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Topic :: Software Development :: Version Control :: Git
url = https://github.com/wizardsoftheweb/gitflow-easyrelease#readme
project_urls =
    'Issue Tracker' = https://github.com/wizardsoftheweb/gitflow-easyrelease/issues

[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
	argparse_color_formatter
	ansicolors
	pytest-runner
tests_require =
	mock
	coverage
	pytest
	pytest-cov

[options.entry_points]
console_scripts =
    git-easyrelease = gitflow_easyrelease.cli_file:cli

[tool:pytest]
addopts = -v -x --cov-report html --cov-report term --cov=gitflow_easyrelease --color=yes

[aliases]
test = pytest

[bumpversion:file:setup.py]

